[package]
name = "chunkdump"
version = "0.1.0"
edition = "2021"
authors = ["Dave White"]
description = "Exports the metadata from wav files including non-standard chunks"
license = "Apache-2.0"

[dependencies]
byte-unit = "5.1.6"
flate2 = "1.0.35"
id3 = "1.16.1"
thiserror = "2.0.11"
upon = "0.8.1"


