[package]
name = "chunkdump"
version = "0.7.0"
edition = "2021"
authors = ["Dave White"]
description = "Exports the metadata from Riff Wave, RIFF RMID, AIFF/AIFF-C, Flac, Ogg Vorbis, MP3, and SMF MIDI files including non-standard chunks"
license = "Apache-2.0"

[profile.release]
strip = true

[dependencies]
byte-unit = "5.1.6"
flate2 = "1.0.35"
id3 = "1.16.1"
thiserror = "2.0.11"
upon = "0.9.0"
serde = { version = "1.0.217", features = ["derive"] }
argh = "0.1.13"
chrono = "0.4.39"
extended = "0.1.0"

